--- a/SMO.ipynb
+++ b/SMO.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -63,19 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(784, 100)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# \"label\" is an 1 x l array containing the labels\n",
     "# \"data\" is an d x l array containing the data points\n",
@@ -99,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -245,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -305,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -339,22 +331,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'def kernel(v1,v2):\\n    return np.dot(v1,v2)'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''def kernel(v1,v2):\n",
     "    return np.dot(v1,v2)'''"
@@ -362,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -378,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -400,35 +381,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.0989011   1.          0.09890098  0.09890109  1.          1.\n",
-      "  0.09890134  0.09890062  0.0989011   0.0989011   0.09890134  0.0989011\n",
-      "  0.09890061  0.09890109  0.09890079  0.0989008   0.09890061  1.\n",
-      "  0.09890062  0.09890109  0.09890109  0.09890062  0.0989011   1.\n",
-      "  0.09890086  0.0989011   0.09890109  0.09890062  0.09890092  0.09890133\n",
-      "  0.09890109  0.09890071  0.09890098  0.09890092  0.09890127  0.09890062\n",
-      "  0.09890142  0.09890092  0.09890116  0.09890203  0.09890157  0.09890145\n",
-      "  0.0989011   0.09890122  0.09890064  0.0989011   0.09890157  0.09890133\n",
-      "  0.09890127  0.09890109  0.0989008   0.09890133  0.09890092  0.09890086\n",
-      "  1.          0.09890174  0.09890122  0.09890071  0.09890124  0.09890133\n",
-      "  0.09890085  0.09890192  0.09890133  1.          0.09890062  0.09890073\n",
-      "  0.09890142  0.09890204  0.0989007   1.          0.09890062  0.09890062\n",
-      "  0.09890062  0.09890122  0.09890062  0.09890122  0.09890215  0.09890062\n",
-      "  0.0989011   0.09890215  0.09890157  0.09890133  0.09890203  0.09890133\n",
-      "  0.09890203  0.09890116  0.09890016  0.09890144  0.09890062  0.09890145\n",
-      "  0.0989007   0.09890124  0.09890134  0.0989011   0.09890134  0.09890033\n",
-      "  0.09890073  0.09890109  1.          0.09890079]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "alpha = np.zeros(l)\n",
     "fcache = np.array(-label, dtype=np.float)\n",
@@ -487,33 +444,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False,\n",
-       "       False, False, False, False, False, False, False, False, False, False], dtype=bool)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "no = 100\n",
     "y = np.zeros(no)\n",
@@ -526,42 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "number_samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.901099841432 0.901097848606\n",
-      "tol-violations!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test, check for violations:\n",
     "memb = [I_membership_no(alpha[i],label[i]) for i in range(l)]\n",
@@ -587,22 +503,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAiQAAAFkCAYAAAAQQyCBAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAAHdNJREFUeJzt3X+QZWV95/H3hx9qQBk0JDNJaQSiMiRrkOmQMCZriLOI\nyPojETVtDCwKLoLRGuNCrFiBQFksGhkhQqCcjUqQ3iXEigZ1J0IqIYnAJt2K0QySRFAJzqiAQyIg\nCt/945zRO23f+UWfebpn3q+qWzP93O9z7vM81T3z6XOec2+qCkmSpJb2aj0ASZIkA4kkSWrOQCJJ\nkpozkEiSpOYMJJIkqTkDiSRJas5AIkmSmjOQSJKk5gwkkiSpOQOJJElqbvBAkuTMJHckeTDJzUmO\n2kb9MUmmkzyU5PYkJ89RsyTJpUnu7utuS/LC4WYhSZKGNGggSfIq4N3AOcCRwK3AuiQHjak/GLgO\nuAE4ArgYWJvk2JGafYHrgZ8AfhV4FnAa8G9DzUOSJA0rQ364XpKbgVuq6s391wG+AlxSVe+co/5C\n4Piq+pmRtilgSVW9qP/6dOC3gOVV9chgg5ckSbvMYGdI+jMZE3RnOwCoLv1cD6wc0+3o/vlR62bV\nvxi4CbgsyYYk/5jkbUncDyNJ0iK1z4DHPgjYG9g4q30jcNiYPsvG1B+Q5PFV9W3gUOD5wFXA8cAz\ngD+km8v5cx00yQ8DxwF3Ag/t6EQkSdqDPQE4GFhXVfcM9SJDBpKh7EUXUl7fn3H5dJKnAm9lTCCh\nCyMf2kXjkyRpd/TrwNVDHXzIQPIN4BFg6az2pcCGMX02jKm/vz87AvBV4OHacvPLemBZkn2q6rtz\nHPdOgKuuuorDDz98+2cgVq9ezZo1a1oPY1FxzXaO67bjXLOd47rtmPXr1/Oa17wG+v9LhzJYIKmq\n7ySZBlYBH4XvbWpdBVwypttNdJdhRr2gb9/s74DJWTWHAV8dE0agv0xz+OGHs2LFiu2eg2DJkiWu\n2Q5yzXaO67bjXLOd47rttEG3PAy9EfQi4LQkJyVZDlwO7Ad8ACDJBUk+OFJ/OXBokguTHJbkDODE\n/jib/SHwlCSXJHlmkhOAtwHvHXgukiRpIIPuIamqa/r3HDmP7tLLZ4Djqurrfcky4Gkj9Xf2AWMN\n8CbgLuB1VXX9SM1dSY7ra26le/+RNcAP3EYsSZIWh8E3tVbVZcBlY547ZY62G+luF97aMW8Bnjsv\nA5QkSc353h3aqsnJ2dt1tC2u2c5x3Xaca7ZzXLeFadB3al0okqwApqenp93IJEnSDpiZmWFiYgJg\noqpmhnodz5BIkqTmDCSSJKk5A4kkSWrOQCJJkpozkEiSpOYMJJIkqTkDiSRJas5AIkmSmjOQSJKk\n5gwkkiSpOQOJJElqzkAiSZKaM5BIkqTmDCSSJKk5A4kkSWrOQCJJkpozkEiSpOYMJJIkqTkDiSRJ\nas5AIkmSmjOQSJKk5gwkkiSpOQOJJElqzkAiSZKaM5BIkqTmDCSSJKk5A4kkSWrOQCJJkpozkEiS\npOYMJJIkqTkDiSRJas5AIkmSmjOQSJKk5gwkkiSpOQOJJElqzkAiSZKaM5BIkqTmDCSSJKk5A4kk\nSWpu8ECS5MwkdyR5MMnNSY7aRv0xSaaTPJTk9iQnb6X215I8muTD8z9ySZK0qwwaSJK8Cng3cA5w\nJHArsC7JQWPqDwauA24AjgAuBtYmOXZM7buAG+d/5JIkaVca+gzJauCKqrqyqm4DTgceAF47pv4N\nwBer6qyq+kJVXQpc2x/ne5LsBVwF/C5wx2CjlyRJu8RggSTJvsAE3dkOAKqqgOuBlWO6Hd0/P2rd\nHPXnABur6v3zM1pJktTSPgMe+yBgb2DjrPaNwGFj+iwbU39AksdX1beT/CJwCt0lHUmStBsYMpDM\nuyRPBK4ETquq+3a0/+rVq1myZMkWbZOTk0xOTs7TCCVJWrympqaYmpraom3Tpk275LWHDCTfAB4B\nls5qXwpsGNNnw5j6+/uzI8uBpwN/niT983sBJHkYOKyqxu4pWbNmDStWrNixWUiStIeY65f0mZkZ\nJiYmBn/twfaQVNV3gGlg1ea2PkSsAj41pttNo/W9F/TtALcBzwaeQ3fJ5gjgo8Bf9n//yjwNX5Ik\n7UJDX7K5CPhAkmng/9HdLbMf8AGAJBcAP15Vm99r5HLgzCQXAn9EF05OBF4EUFXfBv5p9AWSfLN7\nqtYPPBdJkjSQQQNJVV3Tv+fIeXSXXj4DHFdVX+9LlgFPG6m/M8kJwBrgTcBdwOuqavadN5IkaTcy\n+KbWqroMuGzMc6fM0XYj3e3C23v8HziGJElaXPwsG0mS1JyBRJIkNWcgkSRJzRlIJElScwYSSZLU\nnIFEkiQ1ZyCRJEnNGUgkSVJzBhJJktScgUSSJDVnIJEkSc0ZSCRJUnMGEkmS1JyBRJIkNWcgkSRJ\nzRlIJElScwYSSZLUnIFEkiQ1ZyCRJEnNGUgkSVJzBhJJktScgUSSJDVnIJEkSc0ZSCRJUnMGEkmS\n1JyBRJIkNWcgkSRJzRlIJElScwYSSZLUnIFEkiQ1ZyCRJEnNGUgkSVJzBhJJktScgUSSJDVnIJEk\nSc0ZSCRJUnMGEkmS1JyBRJIkNWcgkSRJzRlIJElSc4MHkiRnJrkjyYNJbk5y1Dbqj0kyneShJLcn\nOXnW86cmuTHJvf3jk9s6piRJWtgGDSRJXgW8GzgHOBK4FViX5KAx9QcD1wE3AEcAFwNrkxw7UvZL\nwNXAMcDRwFeAv0jyY4NMQpIkDW7oMySrgSuq6sqqug04HXgAeO2Y+jcAX6yqs6rqC1V1KXBtfxwA\nquo3quryqvpsVd0OnEo3j1WDzkSSJA1msECSZF9ggu5sBwBVVcD1wMox3Y7unx+1biv1APsD+wL3\n7vRgJUlSU0OeITkI2BvYOKt9I7BsTJ9lY+oPSPL4MX0uBP6NHwwykiRpkdin9QAeiyS/DbwS+KWq\nerj1eCRJ0s4ZMpB8A3gEWDqrfSmwYUyfDWPq76+qb482JnkrcBawqqo+vz0DWr16NUuWLNmibXJy\nksnJye3pLknSbm1qaoqpqakt2jZt2rRLXjvdto6BDp7cDNxSVW/uvw7wZeCSqnrXHPX/Ezi+qo4Y\nabsaOLCqXjTSdhbwNuAFVfX32zGOFcD09PQ0K1aseKzTkiRpjzEzM8PExATARFXNDPU6Q99lcxFw\nWpKTkiwHLgf2Az4AkOSCJB8cqb8cODTJhUkOS3IGcGJ/HPo+ZwPn0d2p8+UkS/vH/gPPRZIkDWTQ\nPSRVdU3/niPn0V16+QxwXFV9vS9ZBjxtpP7OJCcAa4A3AXcBr6uq0Q2rp9PdVXPtrJf7vf51JEnS\nIjP4ptaqugy4bMxzp8zRdiPd7cLjjnfI/I1OkiQtBH6WjSRJas5AIkmSmjOQSJKk5gwkkiSpOQOJ\nJElqzkAiSZKaM5BIkqTmDCSSJKk5A4kkSWrOQCJJkpozkEiSpOYMJJIkqTkDiSRJas5AIkmSmjOQ\nSJKk5gwkkiSpOQOJJElqzkAiSZKaM5BIkqTmDCSSJKk5A4kkSWrOQCJJkpozkEiSpOYMJJIkqTkD\niSRJas5AIkmSmjOQSJKk5gwkkiSpOQOJJElqzkAiSZKaM5BIkqTmDCSSJKk5A4kkSWrOQCJJkpoz\nkEiSpOYMJJIkqTkDiSRJas5AIkmSmjOQSJKk5gwkkiSpOQOJJElqbvBAkuTMJHckeTDJzUmO2kb9\nMUmmkzyU5PYkJ89R84ok6/tj3prk+OFmIGlXWLt2beshSGpo0ECS5FXAu4FzgCOBW4F1SQ4aU38w\ncB1wA3AEcDGwNsmxIzXPBa4G3gc8B/gI8GdJfmqwiUgaRBKelrA84Y9OO43l/ddJWg9N0i429BmS\n1cAVVXVlVd0GnA48ALx2TP0bgC9W1VlV9YWquhS4tj/OZm8CPlFVF/U1vwvMAG8cbhqS5lsSng5c\nAawHPtX/eQXw9P55SXuOwQJJkn2BCbqzHQBUVQHXAyvHdDu6f37Uuln1K7ejRtIC91TgMuBFwObo\nkf7rS/vnJe05hjxDchCwN7BxVvtGYNmYPsvG1B+Q5PHbqBl3TEkL0P7AuM1fLwKeuAvHIqm9fVoP\nYFdavXo1S5Ys2aJtcnKSycnJRiOS9kxr167lKXz/zMhsAQ7s60499dRdNzBpDzc1NcXU1NQWbZs2\nbdolr53uKsoAB+4u2TwAvLyqPjrS/gFgSVX9yhx9/hqYrqq3jLT9N2BNVT25//pLwLur6pKRmnOB\nl1bVkWPGsgKYnp6eZsWKFfMwO0mP1fKE9cwdSgo4HLhtoH+fJG2/mZkZJiYmACaqamao1xnskk1V\nfQeYBlZtbku3S20V3f61udw0Wt97Qd++tZpjZ9VIWuC+BXxizHMf75+XtOcY+i6bi4DTkpyUZDlw\nObAf8AGAJBck+eBI/eXAoUkuTHJYkjOAE/vjbHYx8MIkb+lrzqXbPPvegeciaR7dBZwBfIzujAj9\nnx/r2+9qNC5JbQy6h6Sqrunfc+Q8YCnwGeC4qvp6X7IMeNpI/Z1JTgDW0N3eexfwuqq6fqTmpiSv\nBt7RP/6Z7nLNPw05F0nzq6pIwul0G1gPBL4J/AfdD/5Ql5MlLUyDb2qtqsvo7u6b67lT5mi7ke6M\nx9aO+afAn87LACU1Mxo63MAq7dn8LBtJC4JhRNqzGUgkSVJzBhJJktScgUSSJDVnIJEkSc0ZSCRJ\nUnMGEkmS1JyBRJIkNWcgkSRJzRlIJElScwYSSZLUnIFEkiQ1ZyCRJEnNGUgkSVJzBhJJktScgUSS\nJDVnIJEkSc0ZSCRJUnMGEkmS1JyBRJIkNWcgkSRJzRlIJElScwYSSZLUnIFEkiQ1ZyCRJEnNGUgk\nSVJzBhJJktScgUSSJDVnIJEkSc0ZSCRJUnMGEkmS1JyBRJIkNWcgkSRJzRlIJElScwYSSZLUnIFE\nkiQ1ZyCRJEnNGUgkSVJzBhJJktScgUSSJDVnIJEkSc0NFkiSPDnJh5JsSnJfkrVJ9t+OfucluTvJ\nA0k+meQZs455SZLb+ue/lOTiJAcMNQ9JkjS8Ic+QXA0cDqwCTgCeB1yxtQ5JzgbeCLwe+DngW8C6\nJI/rS34c+DHgLcBPAycDLwTWDjB+SZK0i+wzxEGTLAeOAyaq6tN9228CH0vy1qraMKbrm4Hzq+q6\nvs9JwEbgZcA1VfV54BUj9Xck+R3gj5PsVVWPDjEfSZI0rKHOkKwE7tscRnrXAwX8/FwdkhwCLANu\n2NxWVfcDt/THG+dA4H7DiCRJi9dQgWQZ8LXRhqp6BLi3f25cn6I7IzJq47g+SQ4C3s42LgVJkqSF\nbYcu2SS5ADh7KyVFt29kcEmeBHwM+Bzwe9vTZ/Xq1SxZsmSLtsnJSSYnJ+d/gJIkLTJTU1NMTU1t\n0bZp06Zd8tqpqu0vTn4Y+OFtlH0R+A3g96vqe7VJ9gYeAk6sqo/McexDgH8FnlNVnx1p/yvg01W1\neqTticBfAP8OvLiqHt7GuFcA09PT06xYsWIbw5ckSZvNzMwwMTEB3b7QmaFeZ4fOkFTVPcA926pL\nchNwYJIjR/aRrAJCtydkrmPfkWRDX/fZ/jgH0O05uXTk2E8C1gEPAi/ZVhiRJEkL3yB7SKrqNrrQ\n8L4kRyX5BeAPgKnRO2z69xN56UjX9wBvT/LiJM8GrgTuAj7S1z8J+CSwH3AqXehZ2j98kzdJkhap\nQW777b0aeC/d3TWPAtfS3dY76pnA9zZ1VNU7k+xHt0n1QOBvgONHzoKsAI7q//4v/Z+h27tyCPDl\n+Z+GJEka2mCBpKq+CbxmGzV7z9F2LnDumPq/Bn6gjyRJWty8zCFJkpozkEiSpOYMJJIkqTkDiSRJ\nas5AIkmSmjOQSJKk5gwkkiSpOQOJJElqzkAiSZKaM5BIkqTmDCSSJKk5A4kkSWrOQCJJkpozkEiS\npOYMJJIkqTkDiSRJas5AIkmSmjOQSJKk5gwkkiSpOQOJJElqzkAiSZKaM5BIkqTmDCSSJKk5A4kk\nSWrOQCJJkpozkEiSpOYMJJIkqTkDiSRJas5AIkmSmjOQSJKk5gwkkiSpOQOJJElqzkAiSZKaM5BI\nkqTmDCSSJKk5A4kkSWrOQCJJkpozkEiSpOYMJJIkqTkDiSRJam6wQJLkyUk+lGRTkvuSrE2y/3b0\nOy/J3UkeSPLJJM/YSu0nkjya5CXzO3pJkrQrDXmG5GrgcGAVcALwPOCKrXVIcjbwRuD1wM8B3wLW\nJXncHLWrgUeAmt9hS5KkXW2QQJJkOXAc8Lqq+oeq+hTwm8CvJVm2la5vBs6vquuq6nPAScCPAy+b\ndfznAKuB1wIZYg6SJGnXGeoMyUrgvqr69Ejb9XRnM35+rg5JDgGWATdsbquq+4Fb+uNtrvsh4EPA\nGVX1tfkfuiRJ2tWGCiTLgC3CQlU9AtzbPzeuTwEbZ7VvnNVnDfC3VXXd/AxVkiS1tkOBJMkF/SbS\ncY9HkjxrqMH2m1efT3e5RpIk7Sb22cH63wfev42aLwIbgB8dbUyyN/CU/rm5bKDbD7KULc+SLAU2\nX/r5ZeBQYFOyxdaRDye5saqev7WBrV69miVLlmzRNjk5yeTk5Na6SZK0R5iammJqamqLtk2bNu2S\n107V/N+k0m9q/Tzws5v3kSR5AfBx4KlVNWcoSXI38K6qWtN/fQBdODmpqv4kyY8CB83q9jm6DbPX\nVdWXxhx3BTA9PT3NihUrHvsEJUnaQ8zMzDAxMQEwUVUzQ73Ojp4h2S5VdVuSdcD7krwBeBzwB8DU\naBhJchtwdlV9pG96D/D2JP8C3AmcD9wFfKQ/7teYtTelP1PylXFhRJIkLXyDBJLeq4H30t1d8yhw\nLd1tvaOeCXzvGkpVvTPJfnTvV3Ig8DfA8VX18FZex/chkSRpkRsskFTVN4HXbKNm7znazgXO3YHX\n+YFjSJKkxcXPspEkSc0ZSCRJUnMGEkmS1JyBRJIkNWcgkSRJzRlIJElScwYSSZLUnIFEkiQ1ZyCR\nJEnNGUgkSVJzBhJJktScgUSSJDVnIJEkSc0ZSCRJUnMGEkmS1JyBRJIkNWcgkSRJzRlIJElScwYS\nSZLUnIFEkiQ1ZyCRJEnNGUgkSVJzBhJJktScgUSSJDVnIJEkSc0ZSCRJUnMGEkmS1JyBRJIkNWcg\nkSRJzRlIJElScwYSSZLUnIFEkiQ1ZyCRJEnNGUgkSVJzBhJJktScgUSSJDVnIJEkSc0ZSCRJUnMG\nEkmS1JyBRJIkNWcg0VZNTU21HsKi45rtHNdtx7lmO8d1W5gGCyRJnpzkQ0k2Jbkvydok+29Hv/OS\n3J3kgSSfTPKMOWpWJrkhyX/0x/+rJI8fZiZ7Nn9wd5xrtnNctx3nmu0c121hGvIMydXA4cAq4ATg\necAVW+uQ5GzgjcDrgZ8DvgWsS/K4kZqVwCeA/wv8bP94L/Do/E9BkiTtCvsMcdAky4HjgImq+nTf\n9pvAx5K8tao2jOn6ZuD8qrqu73MSsBF4GXBNX3MR8J6qetdIv38eYBqSJGkXGeoMyUrgvs1hpHc9\nUMDPz9UhySHAMuCGzW1VdT9wS388kvxI3/8bSf4uyYb+cs0vDDMNSZK0KwxyhoQuWHxttKGqHkly\nb//cuD5Fd0Zk1MaRPof2f54D/BZwK3AycEOSn66qfx1z7CcArF+/fkfmIGDTpk3MzMy0Hsai4prt\nHNdtx7lmO8d12zEj/3c+YdAXqqrtfgAX0O3VGPd4BHgW8DZg/Rz9NwL/fcyxV/b9l85q/z/A1EjN\no3SXdUZrbgXesZVxv5ou7Pjw4cOHDx8+du7x6h3JDDv62NEzJL8PvH8bNV8ENgA/OtqYZG/gKf1z\nc9kABFjKlmdJlgKbL/18tf9z9qmO9cBPbGVM64BfB+4EHtrq6CVJ0qgnAAfT/V86mB0KJFV1D3DP\ntuqS3AQcmOTIkX0kq+gCxy1jjn1Hkg193Wf74xxAt2fk0r7mziR3A4fN6v4s4OPbGPfV2xq3JEma\n06eGfoFBNrVW1W10Sep9SY7qN53+Ad2ll++dIUlyW5KXjnR9D/D2JC9O8mzgSuAu4CMjNe8C3pTk\n5Ul+Msn5dAHlfw0xF0mSNLyhNrVCt2/jvXR31zwKXEt3W++oZwJLNn9RVe9Msh/d+5UcCPwNcHxV\nPTxSc3H/JmgX0V0CuhX4L1V1x4BzkSRJA0q/6VOSJKkZP8tGkiQ1ZyCRJEnN7RaBxA/y2zlDrttI\n7SeSPJrkJfM7+jaGWLP+mJf0m7wfSPKlJBf3d5ktSknOTHJHkgeT3JzkqG3UH5NkOslDSW5PcvIc\nNa9Isr4/5q1Jjh9uBm3M97olOTXJjUnu7R+f3NYxF5shvtdGan+t//frw/M/8rYG+hldkuTS/t+6\nh/p/01643YMa8k1OdtWD7sP2Zug+aO+5wO3AVdvoczZwL/Bfgf8E/Bnwr8DjZr1Z2zeB/wEsp9uE\neyKwb+s5L+R1G6ldDVxH94Z3L2k934W6ZsBPA38CvAg4BDgG+AJwTev57uQavYru/X5O6n9urujn\nf9CY+oOB/wDeSXfH3JnAd4BjR2qe27e9pa85D/g28FOt57vA1+2PgdOBn6F7e4Q/Au4Dfqz1fBfq\nms2q/QrwV8CHW891oa8bsC/w98CfA0fTvTfYfwaevd3jar0w87Cwy+nu4jlypO044LvAsq30uxtY\nPfL1AcCDwCtH2m4Czm09x8W2bn37c4Av071B3qPsBoFk6DWb1efEvmav1vPeiXW6Gbh45OvQ3b5/\n1pj6C4HPzmqbAj4+8vX/Bj46q+Ym4LLW813I6zZHn72ATcBrWs93Ia9Zv05/C5xC92agu1sgGeJn\n9HS6D7rde2fHtTtcsvGD/HbOIOvW1/0Q8CHgjKr62uzjLGKDrdkcDgTur6pHH+ugd6Uk+wITbDnf\noluncfM9un9+1LpZ9Su3o2bRGnDdZtuf7jfZe3d6sAvEwGt2DrCxqrb1zuSLzoDr9mL6XxL6/y//\nMcnbkmx3ztgdAsmcH+RH9wM3Xx/kdwXdb8IzdB/k95OPfdjNDbVuAGuAv62q6+ZnqAvGkGv2PUkO\nAt5O93232BwE7M0OzLdvn6v+gJH9WuNqxh1zsRlq3Wa7EPg3fvA/l8VokDVL8ot0Z0ZOnb+hLihD\nfa8dCryCLlccT3dZ9beA39negS3YQJLkgn4z0bjHI0meNeAQNq/N5VV1ZVXdWlVvobu2/9oBX/cx\nab1u/ebV59PtH1kUWq/ZrLE8CfgY8Dng93bFa2rPkOS3gVcCL6uRN5vU9yV5It07hJ9WVfe1Hs8i\nsxddSHl9VX26qv4EeAfdpZztMuQ7tT5Wi/WD/FprvW6/TJeUNyUZ7fvhJDdW1fO3Yw67Wus123ys\nJ9KdBv0m8Kv92ZfF5hv0n9o9q30pW1+juervr6pvb6Nm3DEXm6HWDYAkbwXOAlZV1ecf+3AXhHlf\nsyTLgacDf57v/wO2F0CSh4HDavG/K/hQ32tfBR7uL/9sth5YlmSfqvrutga2YM+QVNU9VXX7Nh7f\npbtmdWCSI0e6b/OD/OgWeNXmtnz/g/w+1dfcSbcZca4P8vvS/Mxy/rVeN+ACuh39R4w8oPvYgFPm\nb6bzZwGs2eYzI39Bt5H1JYv1N9iq+g4wzZbzTf/1uA/numm0vveCvn1rNcfOqlm0Blw3kpxFd9r8\nuFn7nxa1gdbsNuDZdJvyN//79VHgL/u/f2Weht/MgN9rfwfMfguIw4Cvbk8Y2Ty4Rf+g+6TffwCO\nAn6B7rLKH8+quQ146cjXZ9F9cvGL6b4B/4xuh/Dobb9vprtF7uXATwLnA98CDmk954W8bnO8zm5x\nl81QawY8iW7X+2fobvtdOvJYjHfZvBJ4gC1vKbwH+JH++QuAD47UHwz8O93+hsOAM4CH6T6janPN\nSrrbfDff9nsu3W2Lu9Ntv0Os29n9Ov3KrO+r/VvPd6Gu2RyvsTveZTPE99pT6c7uXkL3Fhkn0P0y\n9tvbPa7WCzNPi3sgcBXd7Wz3Ae8D9ptV8whw0qy2c+nOgjxAd6r8GXMc+yy6MyL/Tncb2MrW810M\n6zbHMXaXQDLvawb8Ut9n9PFo/+dPtJ7zTq7TGcCddGd8bgJ+duS59wN/Oav+eXS/tT1IF9Z+Y45j\nvpwu7D0IfJbuN/7mc13I6wbcMcf31iPA77ae60JdszmOv9sFkqHWje+f+X2grzmb/jPztufhh+tJ\nkqTmFuweEkmStOcwkEiSpOYMJJIkqTkDiSRJas5AIkmSmjOQSJKk5gwkkiSpOQOJJElqzkAiSZKa\nM5BIkqTmDCSSJKm5/w9W/S799/cUzwAAAABJRU5ErkJggg==\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x1b83b5e4358>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "plt.plot(data[0,:], data[1,:], 'ro')\n",
     "#plt.plot([0,1],[-b/w[1],(b-w[0]*1)/w[1]])\n",
@@ -630,7 +535,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -644,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
