new introduction in report

--- a/Report/multiclassification.tex
+++ b/Report/multiclassification.tex
@@ -1,4 +1,4 @@
-Support Vector Machines are binary classifiers, meaning that they only have two possible output labels. Often one chooses them to be $1$ and $-1$. Our problem however was to classify unknown data into one out of $10$ different categories. Since there is no direct way to change one support vector machine so that it can choose from more than two labels we had to find a way to combine several SVMs, who together would be able to do so. There are a number of well known strategies tackling this issue. Let us first look at a very intuitive but also primitive approach called One-vs-All classification. Using this method one trains as many SVMs as one has classes, so $10$ in our case, and sets labels such that the $i$-th SVM has all training data with label $i$ set to one and everything else to $-1$. When trying to predict a new label one simply looks for a classifier that gave this data point the label one. Unfortunately this approach has many issues. First of all new data points are generally not uniquely classified. Therefore it is necessary to add some sort of confidence score which label is considered to be most likely out of the possible ones. Finding good ways of assigning reliable confidence scores is often not an easy task. We decided to resolve this issue by computing the barycenters of each class and when ambguities arose chose the label of the closest barycenter. This simple strategy notably improved our results and we decided on not devoting any more time on a different strategy because the One-vs-All classification has another major drawback. The number of training points for each classifier being assigned positive and negative labels is very unbalanced, in our case on average $1$ to $9$. Therefore one is likely to get shifted margins to what one would normally perceive to be correct. The penalty term will lead each classifier to give less importance to the positives than the negatives simply because they are less in numbers and can be outweighed by the others. \\ \\ Bild hier oder zu unwichtig? \\  \\ Another common intuitive approach would be the One-vs-One classification. Here during training one only ever considers the data corresponding to two classes and sets one label to $1$ and the other one to $-1$ for every possible pair. 
+Support Vector Machines are binary classifiers, meaning that they only have two possible output labels. Often one chooses them to be $1$ and $-1$. Our problem however was to classify unknown data into one out of $10$ different categories. Since there is no direct way to change one support vector machine so that it can choose from more than two labels we had to find a way to combine several SVMs, who together would be able to do so. There are a number of well known strategies tackling this issue. Let us first look at a very intuitive but also primitive approach called One-vs-All classification. Using this method one trains as many SVMs as one has classes, so $10$ in our case, and sets labels such that the $i$-th SVM has all training data with label $i$ set to one and everything else to $-1$. When trying to predict a new label one simply looks for a classifier that gave this data point the label one. Unfortunately this approach has many issues. First of all new data points are generally not uniquely classified. Therefore it is necessary to add some sort of confidence score which label is considered to be most likely out of the possible ones. Finding good ways of assigning reliable confidence scores is often not an easy task. We decided to resolve this issue by computing the barycenters of each class and when ambiguities arose chose the label of the closest barycenter. This simple strategy notably improved our results and we decided on not devoting any more time on a different strategy because the One-vs-All classification has another major drawback. The number of training points for each classifier being assigned positive and negative labels is very unbalanced, in our case on average $1$ to $9$. Therefore one is likely to get shifted margins to what one would normally perceive to be correct. The penalty term will lead each classifier to give less importance to the positives than the negatives simply because they are less in numbers and can be outweighed by the others. \\ \\ Bild hier oder zu unwichtig? \\  \\ Another common intuitive approach would be the One-vs-One classification. Here during training one only ever considers the data corresponding to two classes and sets one label to $1$ and the other one to $-1$ for every possible pair. 
 In our case this would mean training $45$ (the number arises from the binomial coefficient of $10$ choose $2$) different SVMs however with data sets of a fifth of the original size. Because the issue of how to deal with ambiguities gets even worse we decided not to implement this approach and instead focus our attention on a different strategy that seemed like a much better idea to us and indeed as the next chapter will reveal, yielded very good results:
 
 \subsection{Error Correcting Output Codes}
