--- a/Report/results.tex
+++ b/Report/results.tex
@@ -9,7 +9,7 @@ Where do we bring in cross validation?
 
 General Conclusions? Difficulties?
 
-For One-vs-All linear almost no correct result, barycenters improved things a bit (maybe take out of table if its too bad...)
+For One-vs-All linear almost (<5 \%) no correct result, barycenters improved things a lot  (maybe take out of table if its too bad...)
 
 One-vs-All Gauss: a lot better, I think especially more training data was helpful
 
