mySVM_class auskommentiert (vielleicht etwas zu doll?)

--- a/Report/Report_template.tex
+++ b/Report/Report_template.tex
@@ -118,11 +118,11 @@
 
 
 \section{Multiclass Classification Problem}\label{ch_multiclass}
-%\input{multiclassification.tex}
+\input{multiclassification.tex}
 
 
 \section{Results, Difficulties \& Conclusions}
-%\input{results.tex}
+\input{results.tex}
 
 \bibliography{Report_bib}
   \bibliographystyle{alphadin}
