part of the results

--- a/Report/results.tex
+++ b/Report/results.tex
@@ -17,7 +17,7 @@ ECOC
 
 Table for overview of results 
 
-Each time we tested with ... 500? test points. The given training data set that we had was very large, so we always had data to test our results that was not used for training. 
+Each time we tested with ... 1000 (!!!!!!!!!!!) test points. The given training data set that we had was very large, so we always had data to test our results that was not used for training. 
 
 Talk about average compute times. Or did Paul already say something about that beforehand? 
 
@@ -32,11 +32,11 @@ Talk about the 1500 issue or better not?
 	\caption{Overview Results}
 	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|} \hline
 \multicolumn{1}{|p{2cm}|}{no of training points classifier} & \multicolumn{1}{p{2cm}|}{One-vs-One uniquely classfied correctly linear} & \multicolumn{1}{p{2cm}|}{One-vs-One w/ barycenters linear} & \multicolumn{1}{p{2cm}|}{One-vs-One uniquely classfied correctly Gaussian} &  \multicolumn{1}{p{2cm}|}{One-vs-One w/ barycenters Gaussian} & \multicolumn{1}{p{2cm}|}{ECOC linear} & \multicolumn{1}{p{2cm}|}{ECOC Gaussian} \\ \hline \hline
-	500	&  &  &  &  &  &  \\ \hline
-	1000	&  &  &  &  &  &  \\ \hline
-	2000	&  &  &  &  &  &  \\ \hline
-	5000	&  &  &  &  &  &  \\ \hline
-	10000	&  &  &  &  &  &  \\ \hline
+	500	& 659 & 741 & 754 & 833 & 742 & 874 \\ \hline
+	1000	& 682 & 750 & 843 & 890 & 780 & 927 \\ \hline
+	2000	& 702 & 764 & 898 & 919 &  & 943 \\ \hline
+	5000	& 700 & 738 & 889 & 916 &  & 952 \\ \hline
+	10000	&  &  & 880 & 906 &  & 954 \\ \hline
 	\end{tabular}
 \end{table}
 
