--- a/Report/our_own_SMO.tex
+++ b/Report/our_own_SMO.tex
@@ -1,1 +1,25 @@
-%
+Let $\alpha$ be some feasible variable for Problem (\ref{dual_problem}). Defining
+\begin{equation}
+F_i(\alpha) := y_i (\partial_i d)(\alpha) = \sum_{i = 1}^l \alpha_j y_j k(x_i,x_j) - y_i \quad \text{for} \quad i = 1,\ldots,l,
+\end{equation}
+by careful computation we find that the KKT optimality conditions for a solution of Problem (\ref{dual_problem}) (which are both necessary and sufficient, since Q is spsd), are equivalent to the -- much simpler looking -- pairwise condition
+\begin{equation}\label{equiv_KKT}
+b_{up}(\alpha) := \min_{i \in I_{up}(\alpha)} F_i(\alpha) \geq \max_{j \in I_{low}(\alpha)} F_j(\alpha) =: b_{low}(\alpha),
+\end{equation}
+where $I_{up}(\alpha)$ and $I_{low}(\alpha)$ are subsets of the index set $\{1,\ldots,l\}$ defined by
+\begin{align}
+I_{up}(\alpha) &:= \{ i  \mid  \alpha_i < C \text{ and } y_i = 1 \text{ or } \alpha_i > 0 \text{ and } y_i = -1 \} \\
+I_{low}(\alpha) &:= \{ j \mid \alpha_j < C \text{ and } y_j = -1 \text{ or } \alpha_j > 0 \text{ and } y_j = 1 \}.
+\end{align} 
+Any pair $(i,j) \in I_{up}(\alpha) \times I_{low}(\alpha)$ with $F_i(\alpha) < F_j(\alpha)$ is thus called a \textit{violating pair} and an objective equivalent to solving Problem (\ref{dual_problem}) is to change $\alpha$ so as to remove all such violating pairs. Since a priori we do not know if the solution $\alpha^*$ fulfils (\ref{equiv_KKT}) strictly or not, we define, for some small tolerance $\tau > 0$, a $\tau$-violating pair as some $(i,j) \in I_{up}(\alpha) \times I_{low}(\alpha)$ which satisfies $F_i(\alpha) < F_j(\alpha) - \tau$ and require that all $\tau$-violating pairs be removed, or equivalently, 
+\begin{equation}\label{tau_KKT}
+b_{up}(\alpha) \geq b_{low}(\alpha) - \tau.
+\end{equation}
+It holds that any algorithm of the following form terminates after finitely many steps:
+\begin{algorithm}[General SMO type algorithm] Let $\tau > 0$. Initialize $k = 0 $ and $\alpha = 0$ and generate iterates $\alpha^k$, $k \in \mathbb{N},$ as follows: 
+\begin{enumerate}
+\item If $\alpha^k$ satisfies (\ref{tau_KKT}), stop. Else choose a $\tau$-violating pair $(i,j) \in I_{up}(\alpha^k) \times I_{low}(\alpha^k)$.
+\item Minimize $d$ varying only $\alpha^k_i$ and $\alpha^k_j$, leaving $\alpha^k_n$ fixed for $n \notin \{i,j\}$ and respecting the constraints of Problem (\ref{dual_problem}) to obtain $\alpha^{\text{new}}$.
+\item Set $k := k+1$, $\alpha^k := \alpha^{\text{new}}$ and go to Step 1.
+\end{enumerate}
+\end{algorithm}
