--- a/Report/introduction_to_problem.tex
+++ b/Report/introduction_to_problem.tex
@@ -23,13 +23,13 @@ f(x) = \operatorname{sgn}\left(w^T\Phi(x) + b\right).
 
 
 Approaching binary support vector machines from a more technical side, we find that they aim to find the maximum margin hyperplane in the feature space, i.e. the goal is to maximize the margin while softly penalizing points that lie on the wrong side of the boundary or inside the margin \cite{Bishop2006}. Dualizing this optimization problem, we obtain the following equivalent quadratic program:
-\begin{equation*}\label{eq_dual}
-\begin{aligned}
-& \underset{0 \leq \alpha \leq C}{\text{maximize}}
-& & \sum_{i = 1}^{l}\alpha_i - \frac{1}{2} \sum_{i, j = 1}^{l}\alpha_i  \alpha_j y_i y_j k(x_i, x_j)
-\end{aligned}
-\end{equation*}
-with the dual variable $\alpha$, kernel function $k$ and penalty $C$.
+\begin{equation}\label{dual_problem}
+\begin{array}{rl}
+\text{minimize} & d(\alpha) := \frac{1}{2} \alpha^T Q \alpha - 1^T \alpha \\
+\text{s.t.} &  0 \leq \alpha \leq C  \quad \text{and} \quad 	y^T \alpha = 0,
+\end{array}
+\end{equation}
+where $\alpha$ is the dual variable, $q_{ij} = y_i y_j k(x_i,x_j)$, $k$ the kernel function and $C = 1/2 \lambda l$ for the penalty term $\lambda$ of the soft margin SVM.
 After finding the optimal solution $\alpha^*$ of this program, we can formulate the resulting decision function as
 \begin{equation*}
 f(x) = \operatorname{sgn}\left(\sum_{i=1}^{l}\alpha^*_i y_i k(x_i,x_j)+b\right).
