--- a/Benchmark_of_SMOs.ipynb
+++ b/Benchmark_of_SMOs.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -136,23 +136,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 1.35 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "from smo_platt import smo\n",
-    "smo(np.transpose(train),bench_l,C,kernel,tol,'no', kernel_identifier = 'gaussian kernel')"
+    "smo(np.transpose(train),bench_l,C,kernel,tol,'yes', kernel_identifier = 'gaussian kernel')"
    ]
   },
   {
@@ -365,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -381,13 +373,12 @@
     "from scipy.spatial.distance import hamming\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "import timeit\n",
-    "\n"
+    "import timeit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -422,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -436,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -447,14 +438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#no_train_arr = np.arange(100,1100,100)\n",
-    "no_train_arr = np.arange(100,300,100)\n",
+    "no_train_arr = np.arange(100,800,100)\n",
+    "\n",
     "\n",
     "plot_array_gauss = np.empty((5,np.size(no_train_arr)))\n",
     "plot_array_ssp = np.empty((5,np.size(no_train_arr)))\n",
@@ -579,7 +570,146 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "no_train_arr2 = np.arange(800,1300,100)\n",
+    "\n",
+    "\n",
+    "plot_array_gauss2 = np.empty((5,np.size(no_train_arr2)))\n",
+    "plot_array_ssp2 = np.empty((5,np.size(no_train_arr2)))\n",
+    "\n",
+    "\n",
+    "# Gaussian kernel\n",
+    "notraincounter = -1\n",
+    "def kernel(x1, x2):\n",
+    "        return np.exp(-sigma*np.linalg.norm(x1-x2)**2)\n",
+    "    \n",
+    "for no_train in no_train_arr2:\n",
+    "    notraincounter += 1\n",
+    "    train = train_images[:no_train]\n",
+    "    train_l = train_labels[:no_train]\n",
+    "    bench_l = bench_labels[:no_train]\n",
+    "    lambda_opt = 1./(400*np.array([18,18,18,18,17,18,16,16,16,18,18,20,20,18,18])) #optimal lambdas found via cross validation\n",
+    "    lambd = lambda_opt[classifier]\n",
+    "    C_list = 1./(2*len(train)*lambda_opt)  #compute optimal C from optimal lambda\n",
+    "    C = C_list[classifier]\n",
+    "    sigma_list = [0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.005, 0.0025, 0.005, 0.005, 0.005, 0.0025, 0.005] #optimal sigmas found via cross validation\n",
+    "    sigma = sigma_list[classifier]\n",
+    "    \n",
+    "    \n",
+    "    # scikit-learn\n",
+    "    svm = SVC(C=C, kernel='rbf', gamma=sigma)\n",
+    "    start = timeit.default_timer()\n",
+    "    svm.fit(train, bench_l)\n",
+    "    alphatimeslabeldense = svm.dual_coef_\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_gauss2[0,notraincounter] = stop - start \n",
+    "    \n",
+    "    \n",
+    "    # wss1\n",
+    "    from smo_wss1 import smo\n",
+    "    start = timeit.default_timer()\n",
+    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'gaussian kernel')\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_gauss2[1,notraincounter] = stop - start\n",
+    "    \n",
+    "    # wss1 without K\n",
+    "    from smo_wss1_noK import smo\n",
+    "    start = timeit.default_timer()\n",
+    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'gaussian kernel')\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_gauss2[2,notraincounter] = stop - start\n",
+    "    \n",
+    "    # wss2\n",
+    "    from smo_wss2 import smo\n",
+    "    start = timeit.default_timer()\n",
+    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'gaussian kernel')\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_gauss2[3,notraincounter] = stop - start\n",
+    "    \n",
+    "    # Platt\n",
+    "    from smo_platt import smo\n",
+    "    start = timeit.default_timer()\n",
+    "    smo(np.transpose(train),bench_l,C,kernel,tol,'no', kernel_identifier = 'gaussian kernel')\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_gauss2[4,notraincounter] = stop - start\n",
+    "\n",
+    "    \n",
+    "# standard scalar product\n",
+    "notraincounter = -1\n",
+    "def kernel(x1, x2):\n",
+    "        return np.dot(x1,x2)\n",
+    "    \n",
+    "for no_train in no_train_arr2:\n",
+    "    notraincounter += 1\n",
+    "    train = train_images[:no_train]\n",
+    "    train_l = train_labels[:no_train]\n",
+    "    bench_l = bench_labels[:no_train]\n",
+    "    lambda_opt = 1./(400*np.array([18,18,18,18,17,18,16,16,16,18,18,20,20,18,18])) #optimal lambdas found via cross validation\n",
+    "    lambd = lambda_opt[classifier]\n",
+    "    C_list = 1./(2*len(train)*lambda_opt)  #compute optimal C from optimal lambda\n",
+    "    C = C_list[classifier]\n",
+    "    \n",
+    "    \n",
+    "    # scikit-learn\n",
+    "    svm = SVC(C=C, kernel='linear')\n",
+    "    start = timeit.default_timer()\n",
+    "    svm.fit(train, bench_l)\n",
+    "    alphatimeslabels = svm.dual_coef_\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_ssp2[0,notraincounter] = stop - start\n",
+    "    \n",
+    "    # wss1\n",
+    "    from smo_wss1 import smo\n",
+    "    start = timeit.default_timer()\n",
+    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'standard scalar product')\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_ssp2[1,notraincounter] = stop - start\n",
+    "    \n",
+    "    # wss1 without K\n",
+    "    from smo_wss1_noK import smo\n",
+    "    start = timeit.default_timer()\n",
+    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'standard scalar product')\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_ssp2[2,notraincounter] = stop - start\n",
+    "    \n",
+    "    # wss2\n",
+    "    from smo_wss2 import smo\n",
+    "    start = timeit.default_timer()\n",
+    "    smo(train,bench_l,C,kernel,tol,'no', kernel_identifier = 'standard scalar product')\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_ssp2[3,notraincounter] = stop - start\n",
+    "    \n",
+    "    # Platt\n",
+    "    from smo_platt import smo\n",
+    "    start = timeit.default_timer()\n",
+    "    smo(np.transpose(train),bench_l,C,kernel,tol,'no', kernel_identifier = 'standard scalar product')\n",
+    "    stop = timeit.default_timer()\n",
+    "    plot_array_ssp2[4,notraincounter] = stop - start\n",
+    "    \n",
+    "np.savetxt('plot_array_gauss2.txt', plot_array_gauss, delimiter=',')\n",
+    "np.savetxt('plot_array_ssp2.txt', plot_array_ssp, delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100 200 300 400 500 600 700]\n",
+      "[ 800  900 1000 1100 1200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.arange(100,800,100))\n",
+    "print(np.arange(800,1300,100))"
+   ]
   }
  ],
  "metadata": {
@@ -602,5 +732,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
