--- a/Report/Report_template.tex
+++ b/Report/Report_template.tex
@@ -52,8 +52,8 @@
 \newcommand{\Z}{\mathbb{Z}} % ganze
 \newcommand{\N}{\mathbb{N}} % natuerliche
 \DeclareMathOperator{\sign}{sign}
-
-
+\DeclareMathOperator{\argmax}{argmax}
+\DeclareMathOperator{\argmin}{argmin}
 
 \begin{document}
 
