--- a/Report/results.tex
+++ b/Report/results.tex
@@ -21,7 +21,12 @@ Each time we tested with ... 1000 (!!!!!!!!!!!) test points. The given training 
 
 Talk about average compute times. Or did Paul already say something about that beforehand? 
 
+----->
+Sorry, haven't really tracked compute times consistently. Will, although, compute ecoc Gauss for 10000 training points again with what turned out (surprisingly) to be our fastest SMO (Namely WSS1, not WSS2 as I assumed.) Will be around 2 hours or so. Will give the exact figure. Then we can say at least how long the longest job took. Is that, combined with an extra benchmark section only focused on the comparison of the 5 SMOs applied to only the first of the  15 ECOC classifiers, both kernels, enough?
+
+
 Talk about the 1500 issue or better not?
+----> No. I resolved the issue and I suppose it was a strange coincidence that the problem occurred specifically at 1500 training points. Will talk about the cause of this problem and its resolution in the SMO section.
 
 
 % Ich hätte ganz links oben gerne eine schräge Linie
@@ -31,12 +36,12 @@ Talk about the 1500 issue or better not?
 	\centering
 	\caption{Overview Results}
 	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|} \hline
-\multicolumn{1}{|p{2cm}|}{no of training points classifier} & \multicolumn{1}{p{2cm}|}{One-vs-One uniquely classfied correctly linear} & \multicolumn{1}{p{2cm}|}{One-vs-One w/ barycenters linear} & \multicolumn{1}{p{2cm}|}{One-vs-One uniquely classfied correctly Gaussian} &  \multicolumn{1}{p{2cm}|}{One-vs-One w/ barycenters Gaussian} & \multicolumn{1}{p{2cm}|}{ECOC linear} & \multicolumn{1}{p{2cm}|}{ECOC Gaussian} \\ \hline \hline
-	500	& 659 & 741 & 754 & 833 & 742 & 874 \\ \hline
-	1000	& 682 & 750 & 843 & 890 & 780 & 927 \\ \hline
-	2000	& 702 & 764 & 898 & 919 &  & 943 \\ \hline
-	5000	& 700 & 738 & 889 & 916 &  & 952 \\ \hline
-	10000	&  &  & 880 & 906 &  & 954 \\ \hline
+\multicolumn{1}{|p{2cm}|}{no of training points classifier} & \multicolumn{1}{p{2cm}|}{One-vs-All uniquely classfied correctly linear} & \multicolumn{1}{p{2cm}|}{One-vs-All w/ barycenters linear} & \multicolumn{1}{p{2cm}|}{One-vs-All uniquely classfied correctly Gaussian} &  \multicolumn{1}{p{2cm}|}{One-vs-All w/ barycenters Gaussian} & \multicolumn{1}{p{2cm}|}{ECOC linear} & \multicolumn{1}{p{2cm}|}{ECOC Gaussian} \\ \hline \hline
+	500	& 659 & 741 & 754 & 833 & 747 & 874 \\ \hline
+	1000	& 682 & 750 & 843 & 890 & 787 & 927 \\ \hline
+	2000	& 702 & 764 & 898 & 919 & 778 & 943 \\ \hline
+	5000	& 700 & 738 & 889 & 916 & 820 & 952 \\ \hline
+	10000	& 646 & 675 & 880 & 906 &  & 954 \\ \hline
 	\end{tabular}
 \end{table}
 
