--- a/oneVSall.ipynb
+++ b/oneVSall.ipynb
@@ -218,17 +218,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "counter one Vs all classified  39\n",
-      "counter barycenter classified  61\n",
-      "number of correctly classified labels:  59  out of  100\n",
-      "number of correctly classified labels by one vs all:  36  out of  100\n"
+      "counter one Vs all classified  687\n",
+      "counter barycenter classified  313\n",
+      "number of correctly classified labels:  675  out of  1000\n",
+      "number of correctly classified labels by one vs all:  646  out of  1000\n"
      ]
     }
    ],
    "source": [
-    "kernel = gaussian_kernel\n",
-    "number_of_im = 100;\n",
-    "number_of_test_data = 100\n",
+    "kernel = scalar_product\n",
+    "number_of_im = 10000;\n",
+    "number_of_test_data = 1000\n",
     "train_images_test = train_images[:number_of_im]\n",
     "train_labels_test = train_labels[:number_of_im]\n",
     "np.shape(train_images_test)[1]\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -296,12 +296,21 @@
     "\n",
     "file.close() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
