one more result in array

--- a/Report/results.tex
+++ b/Report/results.tex
@@ -41,7 +41,7 @@ Talk about the 1500 issue or better not?
 	1000	& 682 & 750 & 843 & 890 & 787 & 927 \\ \hline
 	2000	& 702 & 764 & 898 & 919 & 778 & 943 \\ \hline
 	5000	& 700 & 738 & 889 & 916 & 820 & 952 \\ \hline
-	10000	& 646 & 675 & 880 & 906 &  & 954 \\ \hline
+	10000	& 646 & 675 & 880 & 906 & 825 & 954 \\ \hline
 	\end{tabular}
 \end{table}
 
